[CDP-18308]: Update start_process_bazel script

--- a/120-ng-manager/config.yml
+++ b/120-ng-manager/config.yml
@@ -70,6 +70,7 @@ logging:
   loggers:
     org.glassfish.jersey: WARN
     allbegray.slack: WARN
+    com.fasterxml.jackson: DEBUG
     org.glassfish.jersey.server.ServerRuntime.Responder: "OFF"
   appenders:
     - type: console
