--- a/360-cg-manager/src/main/resources/modified_config.yml
+++ b/360-cg-manager/src/main/resources/modified_config.yml
@@ -178,7 +178,7 @@ smtp:
   fromAddress: noreply@harness.io
   useSSL: true
   username: apikey
-  password: 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
+  password: "smtp_password_placeholder"
 
 globalWhitelistConfig:
   filters: 127.0.0.1/8
