[PIE-1860]: testing changes

--- a/800-pipeline-service/config.yml
+++ b/800-pipeline-service/config.yml
@@ -346,7 +346,7 @@ enforcementClientConfiguration:
 shouldUseInstanceCache: ${SHOULD_USE_INSTANCE_CACHE:-true}
 
 secretsConfiguration:
-  secretResolutionEnabled: false
+  secretResolutionEnabled: true
   gcpSecretManagerProject: harness-playground
 
 
